syntax="proto3";

option java_multiple_files = true;
option java_package = "com.guosen.serviceuser.proto.helloworld";
option objc_class_prefix = "HLW";

package helloworld;

service Greeter { 
    //Sends a greeting 
    rpc SayHello (HelloRequest) returns (HelloReply) {} 
    rpc Discovery (HelloRequest) returns (DiscoveryReply) {}
}
    // The request message containing the user's name. 


message HelloRequest { 
    string name = 1; 
} 
    // The response message containing the greetings 
message HelloReply { 
    string message = 1; 
}
message DiscoveryReply {
    repeated string services = 1;
}